@@ -14,12 +14,6 @@ if(!defined('CONFIG_INC'))
 	$RosarioPath = dirname(__FILE__).'/';
 	$pg_dumpPath = '/usr/bin/pg_dump'; // Specify the path to the database dump utility for this server.
 	$wkhtmltopdfPath = '/usr/bin/wkhtmltopdf'; // empty string means wkhtmltopdf will not be called and reports will be rendered in html instead of pdf
-	$wkhtmltopdfAssetsPath = '/var/www/rosariosis/assets/'; // way wkhtmltopdf accesses the assets/ directory, empty string means no translation
-	$StudentPicturesPath = 'assets/StudentPhotos/';
-	$UserPicturesPath = 'assets/UserPhotos/';
-	$PortalNotesFilesPath = 'assets/PortalNotesFiles/';
-	$FS_IconsPath = 'assets/FS_icons/';
-	$LocalePath = 'locale'; // Path were the language packs are stored. You need to restart Apache at each change in this directory
 
 	$DefaultSyear = '2014'; // Default school year, should match the database to be able to login
 	$RosarioNotifyAddress = ''; // email address to send error and new administrator notifications
